note para overflow correct

--- a/src/notes.module.css
+++ b/src/notes.module.css
@@ -225,7 +225,7 @@ color: #ee9415;
     padding: 0.5rem;
 }
 #para p {
-    overflow: scroll;
+  
     font-size: 1.5rem;
     color: rgb(103, 105, 103);
 }
